second chance ok

--- a/src/index.css
+++ b/src/index.css
@@ -392,3 +392,9 @@ header h1 {
     color: #c7bfd6;
   }
 }
+
+#second-chance {
+  color: #94c71f;
+
+  font-family: "Roboto Condensed", sans-serif;
+}
